Fixing up search box alignment

--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
@@ -1716,75 +1716,100 @@
 	===============================================
 */
 
-
-#searching .left_panel_inner {
-	padding:15px;
+.search_panel {
+	position: relative;
+	padding: 8px;
 }
 
-    #searching_form {
-        border-bottom:solid 1px hsl(210,20%,90%);
-        -webkit-box-shadow:0 1px 0 rgba(255,255,255,.3);
-		
-		-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.3); /* Saf3.0+, Chrome */
-		   -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.3); /* FF3.5+ */
-		        box-shadow: 0 1px 0 rgba(255,255,255,0.3); /* Opera 10.5, IE 9.0 */
-		
-        padding-bottom:25px;
-        margin-bottom:25px;
-    }
-        #searchHints {
-            font-size: 120%;
-            background: #fef69c;
-            padding: 3px;
-            border: solid #ddd 1px;
-            margin-bottom: 10px;
-        }
+.search_panel__header {
+	position: relative;
+	width: 100%;
+	height: 33px;
+	overflow: hidden;
+	/*text-align: center;*/
+	vertical-align: middle;
+}
 
-        #searchHints strong {
-            display:block;
-            width:35px;
-            float:left;
-        }
+.absolute--left {
+	display: inline-block;
+	float: left;
+}
 
-        #searching input[type=text], #searching textarea{
-            width:65%;
-        }
-        
-        #startdateinput, #enddateinput {
-            width:30% !important;
-        }
+.absolute--right {
+	display: inline-block;
+	float: right;
+}
 
-        .clearDate {
-            position: absolute;
-            right: 5px;
-            top: -5px;
-        }
+.search_tips__button {
+	text-decoration: underline
+}
 
-        .criteria {
-            overflow:hidden;
-        }
+.search_tips__image {
+	vertical-align: middle;
+}
 
-            ul.criteria li{
-                list-style: none;
-                float: left;
-                margin: 0;
-                margin-right: 5px;
-                width:30%;
-                line-height:1.9em;
-                font-size:1.1em;
-            }
-        
-            .criteria input[type=checkbox] {
-                display:inline-block;
-                margin-right:5px;
-            }
-    
 
-            #searching input[type=submit] {
-                float:none;
-                margin-left:80px;
-                margin-top:10px;
-            }
+/*#searching_form {*/
+	/*border-bottom: solid 1px hsl(210, 20%, 90%);*/
+	/*-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .3);*/
+
+	/*-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.3); !* Saf3.0+, Chrome *!*/
+	/*-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.3); !* FF3.5+ *!*/
+	/*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.3); !* Opera 10.5, IE 9.0 *!*/
+/*}*/
+
+#searchHints {
+	font-size: 120%;
+	background: #fef69c;
+	padding: 3px;
+	border: solid #ddd 1px;
+	margin-bottom: 10px;
+}
+
+#searchHints strong {
+	display: block;
+	width: 35px;
+	float: left;
+}
+
+#searching input[type=text], #searching textarea {
+	width: 65%;
+}
+
+#startdateinput, #enddateinput {
+	width: 30% !important;
+}
+
+.clearDate {
+	position: absolute;
+	right: 5px;
+	top: -5px;
+}
+
+.criteria {
+	overflow: hidden;
+}
+
+ul.criteria li {
+	list-style: none;
+	float: left;
+	margin: 0;
+	margin-right: 5px;
+	width: 30%;
+	line-height: 1.9em;
+	font-size: 1.1em;
+}
+
+.criteria input[type=checkbox] {
+	display: inline-block;
+	margin-right: 5px;
+}
+
+#searching input[type=submit] {
+	float: none;
+	margin-left: 80px;
+	margin-top: 10px;
+}
     
 
 
